--- a/app/components/documents/uploaded-document.hbs
+++ b/app/components/documents/uploaded-document.hbs
@@ -36,7 +36,7 @@
                 checked={{true}}
                 value="geen"
               />
-              Geen
+              Eerste
               <span class="auk-radio__box"></span>
             </label>
             <label class="auk-radio" data-children-count="1" for="BIS">
