--- a/app/templates/search-future/cases.hbs
+++ b/app/templates/search-future/cases.hbs
@@ -330,7 +330,7 @@
               </Auk::Label>
               <Auk::CheckboxList>
                 <Auk::Checkbox
-                  @label="Alle Ministers"
+                  @label="Huidige Ministers"
                   @labelSkin="bold"
                   @checked={{true}}
                   @indeterminate={{and (not this.isSelectedAllItems) this.isSelectedSomeItems}}
