--- a/app/components/web-components/vl-alert.hbs
+++ b/app/components/web-components/vl-alert.hbs
@@ -1,5 +1,3 @@
-{{!-- TODO: octane-refactor --}}
-{{!-- template-lint-disable no-action --}}
 <div
   data-test-vl-alert
   class="vl-alert {{this.typeClass}} {{if @small "vl-alert--small"}}"
@@ -16,7 +14,7 @@
     </div>
   {{/if}}
   {{#if @closeable}}
-    <button data-test-vl-alert-close class="vl-alert__close" type="button" {{action "close"}}>
+    <button data-test-vl-alert-close class="vl-alert__close" type="button" {{on "click" this.close}}>
       <Auk::Icon @name="x" />
       <div class="auk-u-sr-only">
         {{t "close"}}
