feat: replace some instances of VlAlert with AuAlert
Some usages of VlAlert still remain that can't be easily changed due to
them showing a loading state, or because they're closeable and require
for an action to be executed on closing.

--- a/app/components/documents/document-card-list.hbs
+++ b/app/components/documents/document-card-list.hbs
@@ -16,7 +16,12 @@
     </div>
   {{else}}
     <div class="auk-u-mt-2">
-      <WebComponents::VlAlert @message={{t "no-documents-yet"}} />
+      <AuAlert
+        @skin="info"
+        @icon="info-circle"
+      >
+        {{t "no-documents-yet"}}
+      </AuAlert>
     </div>
   {{/each}}
 </Documents::DocumentList>
