--- a/app/templates/agenda/agendaitems/agendaitem/documents.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/documents.hbs
@@ -49,7 +49,12 @@
     />
   {{else}}
     <div class="auk-u-mt-2">
-      <WebComponents::VlAlert @message={{t "no-documents-yet"}} />
+      <AuAlert
+        @skin="info"
+        @icon="info-circle"
+      >
+        {{t "no-documents-yet"}}
+      </AuAlert>
     </div>
   {{/if}}
 {{/unless}}
