--- a/app/templates/cases/case/subcases/subcase/documents.hbs
+++ b/app/templates/cases/case/subcases/subcase/documents.hbs
@@ -44,7 +44,12 @@
         />
       {{else}}
         <div class="auk-u-mt-2">
-          <WebComponents::VlAlert @message={{t "no-documents-yet"}} />
+          <AuAlert
+            @skin="info"
+            @icon="info-circle"
+          >
+            {{t "no-documents-yet"}}
+          </AuAlert>
         </div>
       {{/if}}
 
