fix: correctly use downloadLink argument in VlUploadedDocument

--- a/app/components/ember-kaleidos-webuniversum/vl-uploaded-document.hbs
+++ b/app/components/ember-kaleidos-webuniversum/vl-uploaded-document.hbs
@@ -33,7 +33,7 @@
           <AuLinkExternal
             @icon="download"
             @hideText={{true}}
-            href={{this.downloadLink}}
+            href={{@downloadLink}}
             download={{if @downloadName @downloadName @name}}
           >
             {{t "download"}}
