--- a/app/components/changes-alert.hbs
+++ b/app/components/changes-alert.hbs
@@ -9,7 +9,7 @@
     <AuButton
       data-test-changes-alert-close
       @skin="secondary"
-      {{on "click" this.clearAction}}
+      {{on "click" @onClear}}
     >
       {{@buttonText}}
     </AuButton>
