--- a/app/components/utils/add-document.hbs
+++ b/app/components/utils/add-document.hbs
@@ -14,7 +14,7 @@
             @size={{this.pieceInCreation.file.size}}
             @downloadName={{this.pieceInCreation.file.filename}}
             @downloadLink={{this.pieceInCreation.file.namedDownloadLink}}
-            @delete={{this.deletePieceInCreation}}
+            @onDelete={{this.deletePieceInCreation}}
           />
         </div>
       {{else}}
