--- a/app/components/documents/linked-documents.hbs
+++ b/app/components/documents/linked-documents.hbs
@@ -33,8 +33,8 @@
     @title={{t "document-link-old"}} >
     <Auk::Modal::Body>
       <Utils::AddExistingPiece
-        @add={{this.linkPiece}}
-        @delete={{this.unlinkPiece}}
+        @onLink={{this.linkPiece}}
+        @onUnlink={{this.unlinkPiece}}
       />
     </Auk::Modal::Body>
     <WebComponents::VlModalFooter
