--- a/app/components/utils/add-existing-piece.hbs
+++ b/app/components/utils/add-existing-piece.hbs
@@ -39,8 +39,7 @@
             <td class="auk-table__col--1">
               <AuControlCheckbox
                 data-test-add-existing-piece-checkbox={{true}}
-                @checked={{row.selected}}
-                @onChange={{fn this.select row}}
+                @checked={{includes row this.selected}}
               />
             </td>
             <td class="auk-table__col--8">
