--- a/app/components/web-components/vl-modal-footer.hbs
+++ b/app/components/web-components/vl-modal-footer.hbs
@@ -16,12 +16,12 @@
         <AuButton
           data-test-vl-modal-footer-save={{true}}
           @skin="primary"
-          {{!-- also disable button when 'isLoading', since no loading state on button is available.
+          {{!-- also disable button when 'isLoading', since the loading state on button doesn't block interaction.
             Disabling the button while in loading state is important in order to avoid multiple
             action calls when clicking multiple times on the same confirm-button --}}
           @disabled={{or @disableSave @isLoading}}
-          {{!-- @loading={{@isLoading}}
-          @loadingMessage={{t "please-be-patient"}} --}}
+          @loading={{@isLoading}}
+          @loadingMessage={{t "please-be-patient"}}
           {{on "click" @saveAction}}
         >
           {{@saveButtonText}}
