refactor: rename onCancel and onVerify arguments of VlModalVerify

--- a/app/components/agenda/agendaitem/agendaitem-controls.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-controls.hbs
@@ -65,8 +65,8 @@
   <WebComponents::VlModalVerify
     @title={{t "delete-agendaitem"}}
     @message={{this.deleteWarningText}}
-    @cancel={{this.toggleIsVerifying}}
-    @verify={{fn this.verifyDelete @agendaitem}}
+    @onCancel={{this.toggleIsVerifying}}
+    @onVerify={{fn this.verifyDelete @agendaitem}}
   />
 {{/if}}
 {{#if this.setDecisionResultCode.isRunning}}
