--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -247,7 +247,7 @@
   <WebComponents::VlModalVerify
     @title={{t "document-container-delete"}}
     @message={{t "delete-document-container-message"}}
-    @cancel={{this.cancelDeleteDocumentContainer}}
-    @verify={{this.verifyDeleteDocumentContainer}}
+    @onCancel={{this.cancelDeleteDocumentContainer}}
+    @onVerify={{this.verifyDeleteDocumentContainer}}
   />
 {{/if}}
