--- a/app/components/documents/linked-document-link.hbs
+++ b/app/components/documents/linked-document-link.hbs
@@ -112,7 +112,7 @@
   <WebComponents::VlModalVerify
     @title={{t "document-unlink"}}
     @message={{t "unlink-document-message"}}
-    @cancel={{this.cancelDeletePieceLink}}
-    @verify={{this.verifyDeletePieceLink}}
+    @onCancel={{this.cancelDeletePieceLink}}
+    @onVerify={{this.verifyDeletePieceLink}}
     @verifyButtonText={{t "unlink"}} />
 {{/if}}
