--- a/app/templates/cases/index.hbs
+++ b/app/templates/cases/index.hbs
@@ -125,7 +125,7 @@
   <WebComponents::VlModalVerify
     @title={{t "archive-case"}}
     @message={{t "archive-case-message"}}
-    @cancel={{this.cancelArchiveCase}}
-    @verify={{this.archiveCase}}
+    @onCancel={{this.cancelArchiveCase}}
+    @onVerify={{this.archiveCase}}
   />
 {{/if}}
