refactor: rename onClose argument of VlModal

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -217,7 +217,7 @@
 
 {{#if this.isOpenUploadModal}}
   <WebComponents::VlModal
-    @closeModal={{perform this.cancelUploadPiece}}
+    @onClose={{perform this.cancelUploadPiece}}
     @isOverlay={{true}}
     @title={{t "new-document-piece"}}
   >
