--- a/app/components/documents/document-card/edit-modal.hbs
+++ b/app/components/documents/document-card/edit-modal.hbs
@@ -1,5 +1,5 @@
 <WebComponents::VlModal
-  @closeModal={{this.cancelEdit}}
+  @onClose={{this.cancelEdit}}
   @isOverlay={{true}}
   @title={{t "modify-document"}}
 >
