--- a/app/components/utils/add-document.hbs
+++ b/app/components/utils/add-document.hbs
@@ -1,7 +1,7 @@
 <div class="auk-u-mb-4">
   <WebComponents::VlModal
     @title={{t "document-add"}}
-    @closeModal={{this.cancel}}
+    @onClose={{this.cancel}}
     @isOverlay={{true}}
     @large={{true}}
   >
