--- a/app/templates/agenda/documents.hbs
+++ b/app/templates/agenda/documents.hbs
@@ -53,7 +53,7 @@
 
 {{#if this.isOpenPieceUploadModal}}
   <WebComponents::VlModal
-    @closeModal={{perform this.cancelUploadPieces}}
+    @onClose={{perform this.cancelUploadPieces}}
     @isOverlay={{true}}
     @large={{true}}
     @title={{t "documents-add"}} >
