--- a/app/templates/settings/system-alerts/index.hbs
+++ b/app/templates/settings/system-alerts/index.hbs
@@ -1,7 +1,7 @@
 <WebComponents::VlModal
   @isOverlay={{true}}
   @title={{t "manage-alerts"}}
-  @closeModal={{this.cancel}}
+  @onClose={{this.cancel}}
 >
   <Auk::Modal::Body>
     <div data-test-route-settings-system-alerts-index-alerts-dropdown class="auk-form-group">
