--- a/app/components/cases/cases-header.hbs
+++ b/app/components/cases/cases-header.hbs
@@ -26,7 +26,7 @@
 {{#if this.isOpenNewCaseModal}}
   <WebComponents::VlModal
     @isOverlay={{true}}
-    @closeModal={{this.toggleIsOpenNewCaseModal}}
+    @onClose={{this.toggleIsOpenNewCaseModal}}
     @title={{t "new-case"}} >
     <Cases::NewCase
       @didSave={{this.saveNewCase}}
