--- a/app/templates/settings/system-alerts/edit.hbs
+++ b/app/templates/settings/system-alerts/edit.hbs
@@ -1,7 +1,7 @@
 <WebComponents::VlModal
   @isOverlay={{true}}
   @title={{t "manage-alerts"}}
-  @closeModal={{this.cancel}}
+  @onClose={{this.cancel}}
 >
   <Auk::Modal::Body>
     <Utils::SystemAlertForm
