KAS-3834 change dropdown selector and more waits in test

--- a/app/components/newsletter/newsletter-header-overview.hbs
+++ b/app/components/newsletter/newsletter-header-overview.hbs
@@ -45,6 +45,7 @@
     <Toolbar.Group @position="right" as |Group|>
       <Group.Item>
         <AuDropdown
+          data-test-newsletter-header-actions-dropdown
           @skin="secondary"
           @title={{t "actions"}}
           @alignment="right"
